# ai-content-creation

./: .gitignore  Dockerfile  Dockerfile.api  Dockerfile.celery  Dockerfile.frontend  Dockerfile.streamlit  README.md  docker-compose-dev.yaml  docker-compose.yaml  pyproject.toml
sloppy/: README.md  api.py  celery_app.py  celery_monitor.py  db_manager.py  main.py  socketio_client.py  utils.py
sloppy/client/: README.md  app.py  db_manager.py  package-lock.json  package.json
sloppy/client/components/: application_page.py  env_variables_dialog.py  generated_scripts_container.py  produced_videos_container.py  script_generation.py
sloppy/client/src/app/: layout.tsx  page.tsx
sloppy/client/src/app/api/av-output/[...path]/: route.ts
sloppy/client/src/app/cost-management/: page.tsx
sloppy/client/src/app/creator-analytics/: page.tsx
sloppy/client/src/components/: ScriptModal.tsx  navbar.tsx
sloppy/client/src/hooks/: WebSocket.ts  useWebSocket.ts
sloppy/client/src/lib/: api.ts  socket.ts
sloppy/db/: script_model.py
sloppy/script-gen/: tasks.py
sloppy/script_gen/: tasks.py
sloppy/upload-tt/: tasks.py
sloppy/upload_tt/: tasks.py
sloppy/video_prod/: tasks.py
